  in $wgMemc, to further reduce hits to external storage.
  Set to 0 (disabled) by default.
* Minor changes to the installer. 
* Remove ":" for 'youremail' and 'yourrealname' in includes/templates/Userlogin.php
  so that ":" could be used in i18n for Special:Preferences (like 'username' and 'uid').
* Fix layout for Special:Preferences->Date and Time (position for 'timezonetext').


== Languages updated ==

* Albanian (sq)
* Bashkir (ba)
* Belarusian (be)
* Bishnupriya (bpy) stub file
* Brazilian Portuguese (pt-br)
* Catalan (ca)
* Cantonese (zh-yue)
* Dutch (nl)
* English (en)
* Finnish (fi)
* French (fr)
* German (de)
* Georgian (ka)
* Hebrew (he)
* Hungarian (hu)
* Indonesian (id)
* Japanese (ja)
* Korean (ko)
* Polish (pl)
* Portuguese (pt)
* Ripuarian (ksh)
* Romani (rmy)
* Russian (ru)
* Spanish (es)
* Tajic (tg)
* Tatar (tt)
* Telugu (te)

== Compatibility ==

MediaWiki 1.8 requires PHP 5 (5.1 recommended). PHP 4 is no longer supported.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

Several changes to the database have been made from 1.6:

* A new "langlinks" table tracks interlanguage links
* A new "filearchive" table stores information on deleted files
* A new "querycache_info" table stores information on query page updates

To ensure that these tables are filled with data, run refreshLinks.php after
the upgrade.

If you are upgrading from MediaWiki 1.4.x or earlier, some major database
changes are made, and there is a slightly higher chance that things could
break. Don't forget to always back up your database before upgrading!

See the file UPGRADE for more detailed upgrade instructions.



=== Caveats ===

Some output, particularly involving user-supplied inline HTML, may not
produce 100% valid or well-formed XHTML output. Testers are welcome to
set $wgMimeType = "application/xhtml+xml"; to test for remaining problem