@@ -63,79 +63,15 @@ class SrConverter extends LanguageConverter {
 
 	/* rules should be defined as -{ekavian | iyekavian-} -or-
 		-{code:text | code:text | ...}-
+		update: delete all rule parsing because it's not used
+		        currently, and just produces a couple of bugs
 	*/
 	function parseManualRule($rule, $flags=array()) {
+		// ignore all formatting
+		foreach($this->mVariants as $v) {
+				$carray[$v] = $rule;
+			}
 
-		$echoices = preg_split("/(<[^>]+>)/",$rule,-1,PREG_SPLIT_DELIM_CAPTURE);
-		$choices = array();
-
-		// check if we did a split across an HTML tag
-		// if so, glue them back together
-
-		$ctold = '';
-		foreach($echoices as $ct){
-			if($ct=='');
-			else if(preg_match('/<[^>]+>/',$ct)){ 
-				$ctold.=$ct;
-			}
-			else{
-				$c = explode($this->mMarkup['varsep'],$ct);
-				if(count($c)>1){
-					$choices[]=$ctold.array_shift($c);
-					$ctold=array_pop($c);
-					$choices=array_merge($choices,$c);
-				}
-				else $ctold.=array_pop($c);			
-			}
-		}
-		if($ctold!='') $choices[]=$ctold;
-
-		$carray = array();
-		if(sizeof($choices) == 1) {
-			if(in_array('W', $flags)) {
-				$carray['sr'] = $this->autoConvert($choices[0], 'sr-ec');
-				$carray['sr-ec'] = $this->autoConvert($choices[0], 'sr-ec');
-				$carray['sr-jc'] = $this->autoConvert($choices[0], 'sr-jc');
-				$carray['sr-el'] = $this->autoConvert($choices[0], 'sr-el');
-				$carray['sr-jl'] = $this->autoConvert($choices[0], 'sr-jl');
-			}
-			foreach($this->mVariants as $v) {
-				$carray[$v] = $choices[0];
-			}
-			return $carray;
-		}
-
-		/* detect which format is used, also trim the choices*/
-		$n=0;
-		foreach($choices as $c=>$t) {
-			if(strpos($t, $this->mMarkup['codesep']) !== false) { $n++; }
-			$choices[$c] = trim($t);
-		}
-		/* the -{code:text | ...}- format */
-		if($n == sizeof($choices)) {
-			foreach($choices as $c) {
-				list($code, $text) = explode($this->mMarkup['codesep'], $c);
-				$carray[trim($code)] = trim($text);
-			}
-			return $carray;
-		}
-
-		/* the two choice format -{choice1; choice2}-*/
-		if(sizeof($choices == 2) && $n==0) {
-			if(in_array('S', $flags)) {
-				// conversion between Cyrillics and Latin
-				$carray['sr'] = $carray['sr-ec'] =$carray['sr-jc'] = $choices[0];
-				$carray['sr-el'] =$carray['sr-jl'] = $choices[1];
-			}
-			else {
-				$carray['sr'] = $this->autoConvert($choices[0], 'sr-ec');
-				$carray['sr-ec'] = $this->autoConvert($choices[0], 'sr-ec');
-				$carray['sr-jc'] = $this->autoConvert($choices[1], 'sr-jc');
-				$carray['sr-el'] = $this->autoConvert($choices[0], 'sr-el');
-				$carray['sr-jl'] = $this->autoConvert($choices[1], 'sr-jl');
-			}
-			return $carray;
-		}
 		return $carray;
 	}
 
@@ -169,8 +105,8 @@ class SrConverter extends LanguageConverter {
 	 * We want our external link captions to be converted in variants,
 	 * so we return the original text instead -{$text}-, except for URLs
 	 */
-	function markNoConversion($text) {
-		if(preg_match("/^https?:\/\/|ftp:\/\/|irc:\/\//",$text))
+	function markNoConversion($text, $noParse=false) {
+		if($noParse || preg_match("/^https?:\/\/|ftp:\/\/|irc:\/\//",$text))
 			return parent::markNoConversion($text);
 		return $text;
 	}
@@ -188,22 +124,51 @@ class SrConverter extends LanguageConverter {
 		return parent::autoConvert($text,$toVariant);
 	} 
 
+	/**
+	 *  It translates text into variant, specials:
+	 *    - ommiting roman numbers
+	 */
+	function translate($text, $toVariant){
+		$breaks = '[^\w\x80-\xff]';
+
+		// regexp for roman numbers
+		$roman = 'M{0,4}(CM|CD|D?C{0,3})(XC|XL|L?X{0,3})(IX|IV|V?I{0,3})';
+
+		$reg = '/^'.$roman.'$|^'.$roman.$breaks.'|'.$breaks.$roman.'$|'.$breaks.$roman.$breaks.'/';
+
+		$matches = preg_split($reg, $text, -1, PREG_SPLIT_OFFSET_CAPTURE);
+		
+		$m = array_shift($matches);
+		$ret = strtr($m[0], $this->mTables[$toVariant]);
+		$mstart = $m[1]+strlen($m[0]);
+		foreach($matches as $m) {
+			$ret .= substr($text, $mstart, $m[1]-$mstart);
+			$ret .= parent::translate($m[0], $toVariant);
+			$mstart = $m[1] + strlen($m[0]);
+		}
+
+		return $ret;
+	}
+
 
 }
 
 class LanguageSr extends LanguageSr_ec {
 	function __construct() {
 		global $wgHooks;
+
 		parent::__construct();
 
-		$variants = array('sr', 'sr-ec', 'sr-jc', 'sr-el', 'sr-jl');
+		// these variants are currently UNUSED:
+		// 'sr-jc', 'sr-jl' 
+		$variants = array('sr', 'sr-ec', 'sr-el');
 		$variantfallbacks = array(
 			'sr'    => 'sr-ec',
-			'sr-ec' => 'sr-jc',
-			'sr-jc' => 'sr-ec',
-			'sr-el' => 'sr-jl',
-			'sr-jl' => 'sr-el'
-		);
+			'sr-ec' => 'sr-ec',
+			'sr-el' => 'sr-el',
+			); 
+
+
 		$marker = array();//don't mess with these, leave them as they are
 		$flags = array(
 			'S' => 'S', 'писмо' => 'S', 'pismo' => 'S',
